# slam-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  rusty-tags.vi
share/slam-rs/sample-graphs/: README.md
src/: lib.rs
src/base/: mod.rs  types.rs
src/drivers/: euroc.rs  mod.rs  traits.rs
src/factors/: between_poses_factor.rs  factor_trait.rs  mod.rs
src/geometry/: mod.rs  poses.rs
src/graphs/: graphs.rs  mod.rs
src/solvers/: mod.rs
src/utils/: errors.rs  mod.rs
tests/sample_dataset/: capture_info.json
tests/sample_dataset/cam0/test-w-panos/: Cargo.toml
tests/sample_dataset/cam1/: data.csv
tests/sample_dataset/imu0/: data.csv
